some minor css changes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./style.css" />
-    
+    <link rel="stylesheet" href="./style.css"/>
   </head>
 
   <body class="light-green lighten-5">
@@ -52,7 +51,7 @@
           <i class="material-icons right">send</i>
         </button>
 
-        <ul id="ingredient-list"></ul>
+        <ul id="ingredient-list" class="collection"></ul>
 
       </form>
 
