made several other changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main>
       <div >
-        <h3 id="save" >The amount of food waste produced globally each year is more than enough to feed the nearly 1 billion hungry people in the world. Scary isn’t it? Most people don’t realize how much food they throw away every day, from a few uneaten leftovers to a couple of spoiled produce, it all eventually adds up to a lot of wasted food. </h3>
+        <h3 id="save" >The amount of food waste produced globally each year is more than enough to feed the nearly 1 billion hungry people in the world. Scary isn’t it? Let us help you save our "Mother Earth" by saving food waste (once step at a time)</h3>
 
         </div>
 
@@ -72,7 +72,7 @@
       <!--Row Where Videos Appear-->
       <div class="row1">
         <div class="col-md-12">
-          <div id="videos">Watch the recipe here </div>
+          <div id="videos">Make your life easier by watching recipe video here </div>
         </div>
       </div>
 
@@ -80,7 +80,7 @@
         <div class="col s12 m6">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title"> Let us help you to save our "Mother earth" by reducing food waste . Let's cook together today. </span>
+              <span class="card-title"> "Let's cook together today" </span>
               <!--<p>
                 I am a very simple card. I am good at containing small bits of
                 information. I am convenient because I require little markup to
